# traveling_salesman_problem_visualizer

./: README.md  main.py  pyproject.toml
tsc_core/: __init__.py
tsc_core/src/: app.py
tsc_core/src/data/: __init__.py  locations.py
tsc_core/src/routers/: route_visualizer.py
tsc_core/src/services/: __init__.py  distance_calculator.py  greedy_tsp.py
tsc_core/templates/: map.html
