[project]
name = "tsp-visualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.115.12",
    "folium>=0.19.5",
    "geopy>=2.4.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.1",
]

[tool.uv]
dev-dependencies = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
